	* restore-src/amfetchdump.c: Don't use C++ style comment.
	* restore-src/restore.c: Don't use C++ style comment.
	* server-src/amindexd.c (reply, lreply, fast_lreply): buf must be
	   dynamicaly allocated.
	* server-src/logfile.h: Don't use C++ style comment.
	* server-src/taper.c (free_split_buffer): Test splitbuf against NULL.

2005-11-20  Jean-Louis Martineau <martineau@zmanda.com>
	Patch by Jon H. LaBadie

	* changer-src/chg-disk.sh.in: Check permission on file access.

2005-11-17  Paddy Sreenivasan <paddy@zmanda.com>

        * man/entities/global.entities: New file. Added man page entities.
        * man/entities/xinclude.dtd: New file.
        * man/xslt/man.xsl: Correct include path for settings.xsl.

2005-11-15  John R. Franks <jrfranks@zmanda.com>

	* changer-src/scsi-changer-driver.c: Fix IA-64 compile warnings.
	* common-src/rsh-security.c: Fix IA-64 compile warnings.
	* common-src/ssh-security.c: Fix IA-64 compile warnings.
	* regex-src/engine.c: Fix IA-64 compile warnings.
	* regex-src/regexec.c: Fix IA-64 compile warnings.

2005-11-15  Paddy Sreenivasan <paddy@zmanda.com>

        * configure.in:  Changed defaults for tape_dev and nr_tape_dev.
        * example/amanda.conf.in: Leave only changerfile definition
          uncommented.
        * man/xml-source/amanda.conf.5.xml: Updated defaults for 
          tapedev and rawtapedev

2005-11-10  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/planner.c: Fix incronly.

2005-11-05  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* man/Makefile.am: Set man_MANS,

2005-11-03  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* man/Makefile.am: Set man5_MANS and man8_MANS,
	  install-data-hook use them.

2005-11-03  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Olivier Cherrier

	* man/Makefile.am (install-data-hook): Set protection correclty
	  for man5 and man8.

2005-10-29  Jean-Louis Martineau <martineau@iro.umontreal.ca>
