@@ -14,19 +14,25 @@
 	* server-src/logfile.h: Don't use C++ style comment.
 	* server-src/taper.c (free_split_buffer): Test splitbuf against NULL.
 
+2005-11-22 Paddy Sreenivasan <paddy@zmanda.com>
+        * common-src/rsh-security.c: Fix x86_64 compile warnings.
+        * common-src/ssh-security.c: Fix x86_64 compile warnings.
+        * man/Makefile.am: Added EXTRA_XML files.
+        * man/xml-source/amanda.8.xml: Added spanning patch variables.
+        * man/xml-source/amrecover.8.xml: Added amfetchdump to SEE ALSO.
+        * xslt/global.entities: Removed file.
+
 2005-11-20  Jean-Louis Martineau <martineau@zmanda.com>
 	Patch by Jon H. LaBadie
 
 	* changer-src/chg-disk.sh.in: Check permission on file access.
 
 2005-11-17  Paddy Sreenivasan <paddy@zmanda.com>
-
         * man/entities/global.entities: New file. Added man page entities.
         * man/entities/xinclude.dtd: New file.
         * man/xslt/man.xsl: Correct include path for settings.xsl.
 
 2005-11-15  John R. Franks <jrfranks@zmanda.com>
-
 	* changer-src/scsi-changer-driver.c: Fix IA-64 compile warnings.
 	* common-src/rsh-security.c: Fix IA-64 compile warnings.
 	* common-src/ssh-security.c: Fix IA-64 compile warnings.
